# niamoto

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  codecov.yml  coverage.json  dev-requirements.txt  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js  tox.ini  wrangler.jsonc
.claude/: settings.local.json
.github/: RELEASE.md
.github/workflows/: build-binaries.yml  build-tauri.yml  dependency-audit.yml  deploy.yml  docs.yml  marketing-sync.yml  publish-pypi.yml  tests.yml
.marketing/: plugins.json
build_scripts/: README.md  build_desktop.sh  niamoto.spec  prepare_tauri_bins.sh
build_scripts/pyinstaller_hooks/: hook-rasterio.py  hook-sklearn.py
clawpatch-snapshots/: fresh-open-high-20260520-1245.md  fresh-open-low-20260520-1245.md  fresh-open-medium-20260520-1245.md  open-high-20260520-1200.md  open-low-20260520-1200.json  open-low-20260520-1200.md
config/: config.yml  import.yml
data/: gold_set.json
docs/: CHANGELOG_JSON_API.md  DESIGN_SYSTEM.md  DESKTOP_APP.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_STRUCTURE.md  README.md  STYLE_GUIDE.md  conf.py  index.rst  niamoto.api.rst  niamoto.cli.commands.rst  niamoto.cli.rst  niamoto.cli.utils.rst  niamoto.common.rst  niamoto.common.utils.rst  niamoto.core.components.importers.rst  niamoto.core.components.imports.rst  niamoto.core.components.mappers.rst  niamoto.core.components.rst  niamoto.core.components.statistics.rst  niamoto.core.components.transforms.rst  niamoto.core.models.rst  niamoto.core.plugins.rst  niamoto.core.plugins.transformers.aggregation.rst  niamoto.core.plugins.transformers.class_objects.rst  niamoto.core.plugins.transformers.distribution.rst  niamoto.core.plugins.transformers.formats.rst  niamoto.core.plugins.transformers.rst  niamoto.core.plugins.widgets.rst  niamoto.core.repositories.rst  niamoto.core.rst  niamoto.core.services.rst  niamoto.core.utils.rst  niamoto.gui.api.rst  niamoto.publish.api_creator.rst  niamoto.publish.common.rst  niamoto.publish.rst  niamoto.publish.static_api.rst  niamoto.publish.static_site.rst  niamoto.publish.static_site_generator.rst  (+4 more)
docs/01-getting-started/: README.md  concepts.md  first-pipeline.md  first-project.md  installation.md  quickstart.md
docs/02-data-pipeline/: README.md  data-preparation.md  export-process.md  widget-system.md
docs/02-user-guide/: README.md  collections.md  export.md  import.md  preview.md  publish.md  site.md  transform.md  widget-catalogue.md
docs/03-cli-automation/: README.md
docs/03-ml-detection/: 2026-03-19-ml-integration-status.md  README.md  acquisition-plan.md  ai-possibilities-cartography.md  auto-config-roadmap.md  auto-configuration-detection.md  auto-configuration-realiste.md  autoresearch-surrogate-loop.md  branch-architecture.md  candidate-data-sources.md  current-state.md  current-training-sources.md  detector-usage.md  implementation.md  ml-detection-dashboard.html  next-session-handoff.md  overview.md  roadmap.md  semantic-detection.md  synthetic-data.md  training-guide.md
docs/04-plugin-development/: README.md  architecture.md  building-widgets.md  creating-transformers.md  custom-exporters.md  database-aggregator-guide.md  database-aggregator.md
docs/05-api-reference/: README.md  api-export-guide.md  cli-commands.md  database-schema.md  plugin-api.md
docs/05-ml-detection/: README.md  branch-architecture.md  ml-detection-dashboard.html  training-guide.md
docs/06-gui/: README.md  architecture.md  development.md  fastapi-dual-purpose-architecture.md  getting-started.md  guide-transform-widgets.md  poc-implementation.md  preview-api.md  preview-architecture.md  reference-plugins-transform.md  user-workflow.md
docs/06-reference/: README.md  api-export-guide.md  cli-commands.md  configuration-analysis.md  configuration-guide.md  core-api.md  database-schema.md  external-apis.md  gui-preview-api.md  plugin-api.md  standard-profiles.md  templates-hierarchy.md  transform-plugins.md  widgets-and-transform-workflow.md  yaml-strategies.md
docs/07-architecture/: README.md  gui-overview.md  gui-preview-system.md  gui-runtime.md  legacy-feedback-worker.md  plugin-system.md  system-overview.md  testing-audit.md  testing-strategy.md
docs/07-tutorials/: README.md  biodiversity-site.md  forest-plot-analysis.md  ml-training-example.md
docs/08-configuration/: README.md  configuration-analysis.md  configuration-guide.md  templates-hierarchy.md
docs/08-roadmaps/: README.md  gbif-challenge-2026.html  target-architecture-2026-comex-cto.md
docs/09-architecture/: README.md  corrections-roadmap.md  gui-overview.md  gui-preview-system.md  gui-runtime.md  pipeline-unified.md  plugin-system.md  system-overview.md  target-architecture-2026-comex-cto.md  target-architecture-2026-execution-plan.md  (+2 more)
electron/: main.mjs  package.json  pnpm-lock.yaml  preload.mjs
examples/: export_with_database_aggregator.yml
ml/: README.md  __init__.py
models/: column_detector.pkl  fusion_model.joblib  header_model.joblib
plotly-bundles/: build.mjs  niamoto-core.js
programmes/: niamoto-fusion.md  niamoto-header-model.md  niamoto-values-model.md
scripts/: .env.example  README.md  auto_generated_import.yml  bench_preview.py  build_tailwind_standalone.py  create_shapefile.py  dev_api.py  dev_gui.sh  generate-plugin-manifest.py  generate_changelog.py  generate_requirements.py  publish.sh  test_auto_detection.py  test_bootstrap.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: config.yml  export.yml  import.yml  transform.yml
src-tauri/icons/: icon.icns  icon_base64.txt
src-tauri/icons/android/mipmap-anydpi-v26/: ic_launcher.xml
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: commands.rs  config.rs  lib.rs  menu.rs
tests/: conftest.py  test_conftest_cleanup.py  test_magicmock_cleanup.py  test_main.py  test_main_module.py  test_resource_cascade.py
(+2338 files in other folders)
