[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niamoto"
version = "0.5.7"
description = ""
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Julien Barbe", email = "julien.barbe@me.com"}
]
keywords = ["niamoto"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.10,<4"
dependencies = [
    # ---------------------
    # Database dependencies
    # ---------------------
    # SQLAlchemy - Comprehensive database toolkit for Python.
    # Documentation: https://www.sqlalchemy.org/
    "sqlalchemy[mypy]==2.0.38",
    # alembic - Database migration tool for SQLAlchemy.
    # Documentation: https://alembic.sqlalchemy.org/en/latest/
    "alembic>=1.12.1",
    # geoalchemy2 - Extensions to SQLAlchemy for working with spatial databases.
    # Documentation: https://geoalchemy-2.readthedocs.io/
    "geoalchemy2>=0.17.0",
    # ---------------------
    # Geospatial libraries
    # ---------------------
    # geopandas - Extends pandas for spatial data operations.
    # Documentation: https://geopandas.org/
    "geopandas>=1.0.0",
    # rasterio - Library for reading and writing raster datasets (e.g., images, geospatial rasters).
    # Documentation: https://rasterio.readthedocs.io/
    "rasterio>=1.3.9",
    # shapely - Manipulation and analysis of planar geometric objects.
    # Documentation: https://shapely.readthedocs.io/
    "shapely>=2.0.4",
    # fiona - support for reading and writing vector data from various sources.
    # Documentation: https://fiona.readthedocs.io/en/stable/
    "fiona>=1.9.6",
    # topojson - TopoJSON is an extension of GeoJSON that encodes topology.
    # Documentation: https://github.com/topojson/topojson
    "topojson>=1.9",
    # -------------------------
    # Data Processing libraries
    # -------------------------
    # pandas - Essential library for data manipulation and analysis.
    # Documentation: https://pandas.pydata.org/
    "pandas>=2.2.1",
    # pyarrow - Python bindings for Apache Arrow. required by pandas.
    # Documentation: https://arrow.apache.org/docs/python/
    "pyarrow>=19.0.0",
    # numpy - Fundamental package for scientific computing in Python.
    # Documentation: https://numpy.org/
    "numpy>=1.24.0,<2.0.0;python_version>='3.10' and python_version<'3.11'", # Pour Python 3.10
    "numpy==2.2.3;python_version>='3.11'", # Pour Python 3.11+
    # ---------------------------
    # Command Line Interface (CLI)
    # ---------------------------
    # click - Create beautiful command line interfaces in a composable way.
    # Documentation: https://click.palletsprojects.com/en/8.0.x/
    "click>=8.1.7",
    # rich - Python library for rich text and beautiful formatting in the terminal.
    "rich>=13.7.1",
    # tabulate - Pretty-print tabular data within Python.
    # Documentation: https://pypi.org/project/tabulate/
    "tabulate>=0.9.0",
    # pyyaml - YAML parser and emitter for Python.
    # Documentation: https://pyyaml.org/wiki/PyYAMLDocumentation
    "pyyaml>=6.0.1",
    # pydantic - Data validation and settings management using Python type hinting.
    # Documentation: https://pydantic-docs.helpmanual.io/
    "pydantic>=2.10.6",
    # flask - Lightweight WSGI web application framework.
    # Documentation: https://flask.palletsprojects.com/
    "flask>=3.0.0",
    # loguru - Simplified logging library with a focus on ease of use.
    # Documentation: https://loguru.readthedocs.io/
    "loguru>=0.7.2",
    # pyproj - Python interface to PROJ (cartographic projections and coordinate transformations library).
    "pyproj>=3.7",
    # rjsmin - JavaScript minifier written in Python.
    "rjsmin>=1.2.2",
    # prompt-toolkit - Library for building powerful interactive command line applications in Python.
    "prompt-toolkit>=3.0.43",
    # rtree - Library for spatial indexing and querying in Python.
    # Documentation: https://rtree.readthedocs.io/
    "rtree>=1.3.0",
    # tomli - TOML parser for Python 3.11 and later.
    "tomli;python_version<'3.11'",
    # requests - HTTP library for Python.
    "requests>=2.32.3",
    # markdown-it-py - Markdown parser for Python.
    "markdown-it-py>=3.0.0",
    # ---------------------
    # Visualization libraries
    # ---------------------
    # Plotly - Interactive graphing library
    # Documentation: https://plotly.com/python/
    # Note: Scattermap was introduced in 5.24.0
    "plotly>=5.24.0", # Minimum version for Scattermap support
]

[project.urls]
Homepage = "https://github.com/niamoto/niamoto"
Repository = "https://github.com/niamoto/niamoto"
Documentation = "https://github.com/niamoto/niamoto#readme"

[project.scripts]
niamoto = "niamoto.cli:cli"

[project.optional-dependencies]
dev = [
    # -------------
    # Type Stubs
    # -------------
    # Type stubs for runtime dependencies
    "types-shapely>=2.0.0",
    "types-click>=7.1.8",
    "types-tabulate>=0.9.0.3",
    "types-pluggy>=1.2.0.2",
    "pandas-stubs>=2.1.1.230928",
    "types-pyyaml>=6.0.12.20240311",

    # -------------
    # Testing Tools
    # -------------

    # pytest - A mature full-featured Python testing tool.
    # Documentation: https://docs.pytest.org/
    "pytest>=7.4.3",

    # pytest-cov - Plugin for pytest that measures code coverage during test execution.
    # Documentation: https://pytest-cov.readthedocs.io/
    "pytest-cov>=4.1.0",

    # pytest-mock - Thin-wrapper around the mock package for easier use with pytest.
    # Documentation: https://github.com/pytest-dev/pytest-mock
    "pytest-mock>=3.12.0",

    # requests-mock - Mock HTTP requests made by the requests library.
    # Documentation: https://requests-mock.readthedocs.io/
    "requests-mock>=1.12.1",

    # hypothesis - Library for property-based testing.
    # Documentation: https://hypothesis.readthedocs.io/
    "hypothesis>=6.88.3",

    # -------------
    # Linting & Formatting
    # -------------

    # An extremely fast Python linter and code formatter, written in Rust.
    # Documentation: https://docs.astral.sh/ruff/
    "ruff>=0.1.5",

    # ----------------
    # Type Checking
    # ----------------

    # mypy - Optional static type checker for Python, aiming to combine the benefits of dynamic and static typing.
    # Documentation: http://mypy-lang.org/
    "mypy>=1.7.0",

    # ----------------------------
    # Development Utilities
    # ----------------------------

    # pre-commit - Framework for managing multi-language pre-commit hooks.
    # Documentation: https://pre-commit.com/
    "pre-commit>=3.5.0",

    # ------------------
    # Documentation Tools
    # ------------------

    # sphinx - Tool to create intelligent and beautiful documentation.
    # Documentation: https://www.sphinx-doc.org/
    "sphinx>=7.2.6",
    "sphinxcontrib-napoleon>=0.7",
    "myst-parser>=4.0",
    "sphinx-markdown-builder>=0.6.6",

    # furo - A clean, customizable Sphinx theme for Python documentation.
    # Documentation: https://pradyunsg.me/furo/
    "furo>=2023.9.10",

    # pyperclip - Cross-platform Python module for copy and paste clipboard functions.
    # Documentation: https://pypi.org/project/pyperclip/
    "pyperclip>=1.8.2",
    "pathspec>=0.11.2",
    "pytest-stub>=1.1.0",

    # ----------------------------
    # Additional Development Tools
    # ----------------------------

    # ipython - Advanced interactive Python shell.
    # Documentation: https://ipython.org/
    "ipython>=8.17.2",
    "setuptools>=75.8.0",
    "bump2version>=1.0.1"
]

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "pre-commit>=4.1.0",
    "tox>=4.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/niamoto"]

[tool.hatch.build.targets.wheel.force-include]
"assets" = "assets"
