[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niamoto"
version = "0.16.1"
description = "Desktop studio and CLI for ecological data: import biodiversity records, compute statistics and maps, publish a static portal."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Julien Barbe", email = "julien.barbe@me.com"}
]
keywords = [
    "ecology",
    "biodiversity",
    "taxonomy",
    "desktop-app",
    "static-site-generator",
    "geospatial",
    "duckdb",
    "tauri",
    "data-pipeline",
    "scientific-publishing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12,<4"
dependencies = [
    # ---------------------
    # Database dependencies
    # ---------------------
    # SQLAlchemy - Comprehensive database toolkit for Python.
    # Documentation: https://www.sqlalchemy.org/
    "sqlalchemy>=2.0.48",
    # ---------------------
    # Geospatial libraries
    # ---------------------
    # geopandas - Extends pandas for spatial data operations.
    # Documentation: https://geopandas.org/
    "geopandas>=1.1.3",
    # pyogrio - Bulk-oriented vector file I/O using GDAL/OGR.
    # Documentation: https://pyogrio.readthedocs.io/
    "pyogrio>=0.12.1",
    # rasterio - Library for reading and writing raster datasets (e.g., images, geospatial rasters).
    # Documentation: https://rasterio.readthedocs.io/
    "rasterio>=1.5.0",
    # shapely - Manipulation and analysis of planar geometric objects.
    # Documentation: https://shapely.readthedocs.io/
    "shapely>=2.1.2",
    # topojson - TopoJSON is an extension of GeoJSON that encodes topology.
    # Documentation: https://github.com/topojson/topojson
    "topojson>=1.10",
    # -------------------------
    # Data Processing libraries
    # -------------------------
    # pandas - Essential library for data manipulation and analysis.
    # Documentation: https://pandas.pydata.org/
    "pandas>=3.0.2,<4",
    # numpy - Fundamental package for scientific computing in Python.
    # Documentation: https://numpy.org/
    "numpy>=2.4.4,<3",
    # ---------------------------
    # Command Line Interface (CLI)
    # ---------------------------
    # click - Create beautiful command line interfaces in a composable way.
    # Documentation: https://click.palletsprojects.com/en/8.0.x/
    "click>=8.3.0",
    # rich - Python library for rich text and beautiful formatting in the terminal.
    "rich>=14.3.3",
    # pyyaml - YAML parser and emitter for Python.
    # Documentation: https://pyyaml.org/wiki/PyYAMLDocumentation
    "pyyaml>=6.0.3",
    # pydantic - Data validation and settings management using Python type hinting.
    # Documentation: https://pydantic-docs.helpmanual.io/
    "pydantic>=2.12.5",
    # pyproj - Python interface to PROJ (cartographic projections and coordinate transformations library).
    "pyproj>=3.7.2",
    # requests - HTTP library for Python.
    "requests>=2.33.1",
    # markdown-it-py - Markdown parser for Python.
    "markdown-it-py>=3.0.0,<4.0.0",
    # jinja2 - Template engine for Python (used by exporters and API)
    # Documentation: https://jinja.palletsprojects.com/
    "jinja2>=3.1.0",
    # ---------------------
    # Visualization libraries
    # ---------------------
    # Plotly - Interactive graphing library
    # Documentation: https://plotly.com/python/
    "plotly>=6.6.0",
    # ---------------------
    # GUI libraries
    # ---------------------
    # FastAPI - Modern, fast web framework for building APIs
    # Documentation: https://fastapi.tiangolo.com/
    "fastapi>=0.135.1",
    # AnyIO - Async compatibility layer used by the FastAPI/Starlette stack.
    # Pin a Python 3.14-compatible minimum to avoid the from_thread.py SyntaxWarning.
    "anyio>=4.13.0",
    # Uvicorn - Lightning-fast ASGI server
    # Documentation: https://www.uvicorn.org/
    "uvicorn[standard]>=0.41.0",
    # python-multipart - Required for file uploads in FastAPI
    # Documentation: https://github.com/andrew-d/python-multipart
    "python-multipart>=0.0.22",
    # httpx - HTTP client library for making API requests
    # Documentation: https://www.python-httpx.org/
    "httpx>=0.25.0",
    # scikit-learn - Machine learning library for Python
    # Documentation: https://scikit-learn.org/
    "scikit-learn>=1.8.0",
    # scipy - Scientific computing primitives used directly by the ML feature pipeline.
    # Documentation: https://scipy.org/
    "scipy>=1.17.1",
    # Unidecode - Unicode to ASCII transliteration for header normalization
    # Documentation: https://pypi.org/project/Unidecode/
    "Unidecode>=1.3.8",
    # duckdb - DuckDB is an in-process SQL OLAP database management system
    # Documentation: https://duckdb.org/
    "duckdb>=1.5.0",
    # duckdb-engine - SQLAlchemy driver for DuckDB
    "duckdb-engine>=0.17.0",
    "markdown>=3.10.2",
    # keyring - System keyring access for secure credential storage
    # Documentation: https://pypi.org/project/keyring/
    "keyring>=25.0.0",
    "openpyxl>=3.1.5",
]

[project.urls]
Homepage = "https://github.com/niamoto/niamoto"
Repository = "https://github.com/niamoto/niamoto"
Documentation = "https://niamoto.github.io/niamoto/"
Changelog = "https://github.com/niamoto/niamoto/blob/main/CHANGELOG.md"
Issues = "https://github.com/niamoto/niamoto/issues"
Discussions = "https://github.com/niamoto/niamoto/discussions"

[project.scripts]
niamoto = "niamoto.cli:cli"

[project.optional-dependencies]
docs = [
    # sphinx - Tool to create intelligent and beautiful documentation.
    # Documentation: https://www.sphinx-doc.org/
    "sphinx>=7.3.7,<9",
    "myst-parser>=4.0,<5",
    "sphinx-markdown-builder>=0.6.8",
    # furo - Clean, customizable Sphinx theme.
    # Documentation: https://pradyunsg.me/furo/
    "furo>=2024.1.29",
    # sphinx-design - Cards, grids, tabs, badges used across section READMEs.
    "sphinx-design>=0.5.0",
    # sphinx-copybutton - Copy-to-clipboard button on code blocks.
    "sphinx-copybutton>=0.5.2",
    # sphinx-reredirects - HTML redirects for renamed pages (see docs/conf.py).
    "sphinx-reredirects>=0.1.3",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "hypothesis>=6.88.3",
    "ipython>=8.17.2",
    "mypy>=1.19.1",
    "pandas-stubs>=2.1.1.230928",
    "pathspec>=0.11.2",
    "pre-commit>=4.5.1",
    "pytest>=8.4.1,<9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.15.0",
    "pytest-stub>=1.1.0",
    "pytest-xdist>=3.5.0",
    "requests-mock>=1.12.1",
    "ruff>=0.1.5",
    "setuptools>=75.8.0",
    "sqlalchemy[mypy]>=2.0.44",
    "tox>=4.52.0",
    "types-click>=7.1.8",
    "types-pluggy>=1.2.0.2",
    "types-pyyaml>=6.0.12.20240311",
    "types-shapely>=2.0.0",
    "types-tabulate>=0.9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/niamoto"]

[tool.hatch.build.targets.wheel.force-include]
"assets" = "assets"
"ml/models" = "niamoto/models"
# Note: src/niamoto/gui/help_content is already shipped via packages = ["src/niamoto"].
# Do NOT force-include it — it would duplicate every entry and PyPI rejects the wheel (400).
# GUI dist files - only included when building for PyPI with publish.sh
# Commented out for CI/CD compatibility
# "src/niamoto/gui/ui/dist" = "niamoto/gui/ui/dist"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"', run with '-m slow')",
]
filterwarnings = [
    # Rich wants ipywidgets for Jupyter but we don't need it in tests
    "ignore::UserWarning:rich.live",
    # Pandas false positive: our SQLAlchemy connections are valid but pandas doesn't recognize them
    "ignore:pandas only supports SQLAlchemy connectable:UserWarning",
    # Expected warning when we try to auto-detect datetime formats
    "ignore:Could not infer format:UserWarning",
    # Pyogrio still imports the deprecated shapely.geos module
    "ignore:The 'shapely.geos' module is deprecated:DeprecationWarning:pyogrio",
    # Pyproj deprecated scalar conversion - external library issue, will be fixed in NumPy 2.x
    "ignore:Conversion of an array with ndim > 0 to a scalar is deprecated:DeprecationWarning:pyproj",
    # Geopandas warnings for test cases with intentionally invalid/mismatched CRS
    "ignore:Geometry is in a geographic CRS:UserWarning",
    "ignore:CRS mismatch between the CRS:UserWarning",
    "ignore:`keep_geom_type=True` in overlay resulted in:UserWarning:geopandas",
]
