[package]
name = "app"
version = "0.11.0"
description = "Niamoto Desktop - Ecological data platform"
authors = ["Julien Barbe"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"
cocoa = "0.26"
objc = "0.2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"
